--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,17 @@
     padding: 10px 20px;
     width: 100px;
     text-align: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 400;
+  }
+
+  .button2 {
+    border: none;
+    border-radius: 15px;
+    padding: 10px 20px;
+    width: 200px;
+    text-align: center;
     font-size: 16px;
     font-weight: 400;
   }
