--- a/public/style.css
+++ b/public/style.css
@@ -62,3 +62,10 @@
     font-size: 16px;
     font-weight: 400;
   }
+
+  .centerImage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
